--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "@ionic-native/barcode-scanner": "^4.3.1",
     "@ionic-native/camera-preview": "^4.3.2",
     "@ionic-native/core": "4.3.0",
+    "@ionic-native/native-storage": "^4.3.3",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
+    "cordova-android": "~6.3.0",
     "cordova-ios": "4.5.2",
     "cordova-plugin-camera-preview": "^0.9.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.15",
+    "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.7.1",
@@ -39,8 +42,7 @@
     "phonegap-plugin-barcodescanner": "^6.0.8",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
