--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
-    "cordova-android": "~6.3.0",
     "cordova-ios": "4.5.2",
     "cordova-plugin-camera-preview": "^0.9.0",
     "cordova-plugin-compat": "^1.2.0",
@@ -42,7 +41,8 @@
     "phonegap-plugin-barcodescanner": "^6.0.8",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-android": "~6.3.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
