--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
     "@ionic-native/barcode-scanner": "^4.3.1",
     "@ionic-native/camera-preview": "^4.3.2",
     "@ionic-native/core": "4.3.0",
-    "@ionic-native/native-storage": "^4.3.3",
+    "@ionic-native/in-app-browser": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
-    "@ionic/storage": "2.0.1",
-    "cordova-ios": "4.5.2",
+    "@ionic-native/themeable-browser": "^4.4.2",
+    "@ionic/storage": "^2.0.1",
+    "cordova-android": "~6.3.0",
     "cordova-plugin-camera-preview": "^0.9.0",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-ionic-webview": "^1.1.15",
-    "cordova-plugin-nativestorage": "^2.2.2",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-inappbrowser": "^1.7.2",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-themeablebrowser": "^0.2.17",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -42,7 +44,7 @@
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "cordova-ios": "~4.5.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -51,17 +53,21 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "phonegap-plugin-barcodescanner": {},
+      "phonegap-plugin-barcodescanner": {
+        "CAMERA_USAGE_DESCRIPTION": " "
+      },
       "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-camera-preview": {}
+      "cordova-plugin-camera-preview": {},
+      "cordova-plugin-themeablebrowser": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
