--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ionic-native/status-bar": "4.3.0",
     "@ionic-native/themeable-browser": "^4.4.2",
     "@ionic/storage": "^2.0.1",
-    "cordova-android": "~6.3.0",
+    "cordova-ios": "~4.5.0",
     "cordova-plugin-camera-preview": "^0.9.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
@@ -44,7 +44,7 @@
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18",
-    "cordova-ios": "~4.5.0"
+    "cordova-android": "~6.3.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -66,8 +66,8 @@
       "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
