--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-camera-preview": "^0.11.0",
     "cordova-plugin-datepicker": "^0.9.3",
+    "cordova-plugin-decimal-key": "^1.1.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "cordova-plugin-themeablebrowser": "^0.2.18",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
+    "ionic4-date-picker": "^0.1.0",
     "moment": "^2.24.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
@@ -95,7 +97,8 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-datepicker": {}
+      "cordova-plugin-datepicker": {},
+      "cordova-plugin-decimal-key": {}
     },
     "platforms": [
       "android",
